@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	8.51 (gritter) 5/7/07";
+	"@(#)/usr/ucb/otfdump.sl	8.52 (gritter) 5/11/07";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  8.51 (gritter) 5/7/07";
-const char creator[] = "Heirloom Documentation Tools - dpost 8.51 (gritter) 5/7/07";
+static const char sccsid[] USED = "@(#)dpost.sl  8.52 (gritter) 5/11/07";
+const char creator[] = "Heirloom Documentation Tools - dpost 8.52 (gritter) 5/11/07";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.51 (gritter) 5/7/07";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.52 (gritter) 5/11/07";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.51 (gritter) 5/7/07";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.52 (gritter) 5/11/07";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "8.51";
+const char revision[] = "8.52";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.110 (gritter) 3/5/07
@@ -26,7 +26,7 @@ n2.c: * Sccsid @(#)n2.c	1.46 (gritter) 3/5/07
 n3.c: * Sccsid @(#)n3.c	1.180 (gritter) 12/17/06
 n4.c: * Sccsid @(#)n4.c	1.100 (gritter) 3/9/07
 n5.c: * Sccsid @(#)n5.c	1.128 (gritter) 4/10/07
-n7.c: * Sccsid @(#)n7.c	1.176 (gritter) 4/14/07
+n7.c: * Sccsid @(#)n7.c	1.177 (gritter) 5/11/07
 n8.c: * Sccsid @(#)n8.c	1.41 (gritter) 4/11/07
 n9.c: * Sccsid @(#)n9.c	1.75 (gritter) 3/4/07
 ni.c: * Sccsid @(#)ni.c	1.47 (gritter) 12/17/06
